# BabaYaga

./: AGENTS.md  BabaYaga Configuration Guide.md  CHANGES.md  COMPREHENSIVE_REVIEW.md  CONFIGURATION.md  DESIGN.md  Dockerfile  NATIVE_MYTHRIL_IMPLEMENTATION.md  QUICKSTART.md  README.md  README_backup.md  REVIEW_SUMMARY.md  client.py  docker-compose.yml  install.py  mcp_servers.json.example  pyproject.toml
babayaga/: __main__.py  analysis_engine.py  client.py  client_backup.py  config.toml  orchestration.py  orchestration_backup.py
babayaga/agents/: adversary-alpha.md  adversary-beta.md  base.py  build-alpha.md  build-beta.md  build-gamma.md  elite-web3-orchestrator.md  elite_agents.py  financial-flow-analyzer.md  hunter-alpha.md  hunter-beta.md  hunter-delta.md  hunter-epsilon.md  hunter-eta.md  hunter-gamma.md  hunter-iota.md  hunter-kappa.md  hunter-theta.md  hunter-zeta.md  orchestrator.py  recon-alpha.md  recon-beta.md  recon-delta.md  recon-epsilon.md  recon-gamma.md  remediation-alpha.md  reporter-alpha.md  reporter-beta.md  skeptic-alpha.md  skeptic-beta.md  skeptic-gamma.md  validator-alpha.md  validator-beta.md
babayaga/cli/: __init__.py  cli.py  main.py
babayaga/config/: babayaga_config.py  native_config.toml  settings.py  setup_cli.py
babayaga/core/: adapters.py
babayaga/engines/: __init__.py  advanced_engine.py  fuzzing_engine.py  static_engine.py
babayaga/llm/: enhanced_client.py
babayaga/mcp/: __init__.py  client.py
babayaga/modules/: echidna_test.py  foundry_module.py  hybrid_slither_module.py  mythril_module.py  native_mythril_module.py  slither_module.py
babayaga/native/: DETECTORS_MANIFEST.json  QUICK_REFERENCE.md  README.md  SECURIFY2_IMPLEMENTATION.md  __init__.py  base_detector.py  cli.py  detector_registry.py  native_engine.py
babayaga/native/medusa_detectors/: README.md  __init__.py  conservation_invariants.py  invariant_checker.py  liveness_invariants.py  permission_invariants.py  property_violations.py  symbolic_engine.py
babayaga/native/mythril_detectors/: __init__.py  integer_overflow.py  reentrancy.py  symbolic_engine.py  tx_origin.py  unchecked_call.py  unprotected_ether.py  unprotected_selfdestruct.py
babayaga/native/securify2_detectors/: __init__.py  integer_overflow.py  locked_ether.py  missing_access_control.py  timestamp_dependence.py  uninitialized_storage.py  unprotected_selfdestruct.py  unsafe_delegatecall.py
babayaga/native/slither_detectors/: __init__.py  access_control.py  block_hash_usage.py  integer_overflow.py  reentrancy.py  timestamp_dependence.py  tx_origin.py  unchecked_call.py
babayaga/orchestrator/: main.py
babayaga/project/: builder.py  detector.py
babayaga/server/: connector.py
babayaga/tools/: manager.py
babayaga/utils/: constants.py  version.py
design/: DESIGN.md
docs/: NATIVE_ANALYSIS.md  NATIVE_DETECTORS_REFERENCE.md  NATIVE_IMPLEMENTATION_SUMMARY.md  NATIVE_MYTHRIL.md  NATIVE_VS_SUBPROCESS.md  SWC_MAPPING.md  UPDATING_DETECTORS.md
examples/: medusa_analysis_example.py  native_analysis_example.py
tests/fixtures/: sample_contracts.py
tests/integration/: test_audit_workflow.py  test_medusa_integration.py
tests/unit/: test_analysis_engine.py  test_echidna_native.py  test_fuzzing_engine_integration.py  test_medusa_detectors.py  test_native_detectors.py  test_native_mythril_detectors.py  test_securify2_detectors.py  test_slither_module.py
