[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babayaga"
version = "0.1.0"
description = "Comprehensive smart contract auditing tool powered by local LLMs"
readme = "README.md"
authors = [
    {name = "BabaYaga Team", email = "team@babayaga.com"}
]
maintainers = [
    {name = "BabaYaga Team", email = "team@babayaga.com"}
]
keywords = [
    "smart-contracts",
    "security",
    "audit",
    "blockchain",
    "ethereum",
    "solidity",
    "defi",
    "web3",
    "llm",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed"
]
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.1.7",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "httpx>=0.24.0",
    "toml>=0.10.2",
    "pydantic>=2.0.0",
    "click>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0"
]
security = [
    "slither-analyzer>=0.9.0",
    "mythril>=0.23.0"
]

[project.urls]
Homepage = "https://github.com/user/babayaga"
Repository = "https://github.com/user/babayaga.git"
"Bug Tracker" = "https://github.com/user/babayaga/issues"

[project.scripts]
babayaga = "babayaga.cli:cli_entry_point"
baba = "babayaga.cli:cli_entry_point"
babayaga-config = "babayaga.config.setup_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["babayaga"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=babayaga",
    "--cov-report=term-missing"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["babayaga"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*"
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "rich.*",
    "prompt_toolkit.*",
    "typer.*"
]
ignore_missing_imports = true
