[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "babayaga"
version = "0.1.0"
description = "BabaYaga: Enhanced Smart Contract Security Auditing Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "avaloki108", email = "avaloki108@users.noreply.github.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]",
    "rich",
    "requests",
    "toml",
    "ollama",
    "watchdog",
    "prompt-toolkit",
    "uv"
]

[project.urls]
Homepage = "https://github.com/avaloki108/BabaYaga"
"Bug Tracker" = "https://github.com/avaloki108/BabaYaga/issues"

[project.scripts]
babayaga = "babayaga.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit"
]
test = [
    "pytest"
]
# Full suite of optional security tools for comprehensive audits
security = [
    "slither-analyzer",
    "echidna-test",
    "securify-2"
]

[tool.setuptools.packages.find]
where = ["src"]
